# pocket

./: .gitignore  .golangci.yml  .goreleaser.yml  CLAUDE.md  CLI_MIGRATION.md  CLI_SPEC.md  CONTRIBUTING.md  Makefile  PHASE2_SCRIPT_MANAGEMENT.md  PLUGIN_SPEC.md  README.md  RELEASING.md  REPO_UPDATES.md  benchmark_test.go  builder.go  builder_test.go  codecov.yml  defaults.go  doc.go  example_test.go  flow.go  flow_test.go  generate.go  go.mod  go.sum  install.sh  lifecycle_test.go  main  options_test.go  pocket.go  pocket_test.go  store.go  store_test.go  type_safety_test.go
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
batch/: README.md  batch.go  generate.go
builtin/: builders.go  builders_test.go  doc.go  registry.go  types.go  validation.go  validation_test.go
builtin/script/: helpers.go  helpers_test.go
cache/: cache.go
compose/: compose.go
docs/: CONTRIBUTING.md  GO_STYLE_GUIDE.md  NODE_REFERENCE.md  NODE_TYPES.md  PLUGINS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_MIGRATION.md  PLUGIN_SDK_API.md  PLUGIN_SYSTEM.md  README.md
fallback/: README.md  chain.go  circuit.go  circuit_test.go  generate.go  policy.go
middleware/: README.md  generate.go  logging.go  metrics.go  middleware.go  patterns.go  timing.go
nodes/: builders.go  builders_test.go  doc.go  registry.go  types.go  validation.go  validation_test.go
plugin/: plugin.go
plugin/examples/rust/word-counter/: Cargo.toml  README.md  manifest.yaml
plugins/: plugin.go
scripts/: go-format-hook.sh
yaml/: README.md  generate.go  loader.go  output.go  parser.go
(+152 files in other folders)
