[package]
name = "word-counter"
version = "1.0.0"
authors = ["Pocket Team"]
edition = "2021"
license = "MIT"
description = "Word counting plugin for Pocket"

[lib]
crate-type = ["cdylib"]

[dependencies]
# For JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For base64 encoding (if needed)
base64 = "0.21"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
strip = true